--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@ calamity. Grab and enjoy the fest.</p>
               </div>
 
               <div class="quote">
-                  <h5>Mr. S. Guneshekar ME</h5>
+                  <h5>Mr. S. Gunesekaran ME</h5>
                   <p>Programme Coordinator, Skara 2018</p>
                   <p>9632587410</p>
               </div>
